--- a/index.html
+++ b/index.html
@@ -649,6 +649,14 @@
                                         exactitud suele estar asociado con el error sistemático 
                                         y puede ser corregido mediante calibración y ajuste del instrumento de medición.</li> </ul>
                                 </p>
+                                <h3>videos</h3>
+                                <a href="https://drive.google.com/file/d/1hdqz-ljIABYdaA15YPp8XWZkHzAzsqOb/view">video 1, tema 3</a>
+                                <a href="https://drive.google.com/file/d/1SB72xcNC1j_qabR4SelOGxBvBx0dCwcn/view">video 2, tema 3</a>
+                                <a href="https://drive.google.com/file/d/15Y04d2E5ADIU0m-iZLnrGq4aIDmRmhbW/view">video 1, tema 4</a>
+
+                                <h3>Nootbooks</h3>
+                                <a href="https://nbviewer.org/github/brayan-hernandez-mar/Permutaciones/blob/cd865c24af76ea46a8d6ea2d9033d5f4091d070c/ejercicio-completos.ipynb">Conjunto 1</a>
+                                <a href="https://nbviewer.org/github/imac17itsoeh/Funciones/blob/fd4b3fea9393832b99f4b286da257d1c5dbeeff8/testGlobal.ipynb">Nootbook 2</a>
 </body>
 </head>
 </html>
