--- a/ejercicios-completos-explicados.html
+++ b/ejercicios-completos-explicados.html
@@ -7581,7 +7581,9 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Ejercicio-9">Ejercicio 9<a class="anchor-link" href="#Ejercicio-9">¶</a></h1><p>Sólo para practicar. Los números telefónicos en la ciudad de Cuernavaca, Morelos, constan de
+<h1 id="Ejercicio-9">Ejercicio 9<a class="anchor-link" href="#Ejercicio-9">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
+<p>Sólo para practicar. Los números telefónicos en la ciudad de Cuernavaca, Morelos, constan de
 siete dígitos.</p>
 <p>a) ¿Cuántas líneas telefónicas pueden crearse en esa ciudad? Recuerda que no pueden comen-
 zar con cero.</p>
@@ -7707,7 +7709,9 @@ pertenecen a la zona 326?</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Ejercicio-10">Ejercicio 10<a class="anchor-link" href="#Ejercicio-10">¶</a></h1><p>Sólo para practicar. Se tiene la palabra MURCIÉLAGO. Si no se permiten repeticiones al usar
+<h1 id="Ejercicio-10">Ejercicio 10<a class="anchor-link" href="#Ejercicio-10">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
+<p>Sólo para practicar. Se tiene la palabra MURCIÉLAGO. Si no se permiten repeticiones al usar
 las letras que la forman, determina:</p>
 <p>a) El número de palabras que puedes crear.</p>
 <ul>
@@ -7879,7 +7883,9 @@ $$10 \times 9 \times 8 \times 7 \times 6 = 30,240$$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Ejercicio-11">Ejercicio 11<a class="anchor-link" href="#Ejercicio-11">¶</a></h1><p>Parque vehicular. La Ciudad de México tiene placas de automóviles con tres números seguidos
+<h1 id="Ejercicio-11">Ejercicio 11<a class="anchor-link" href="#Ejercicio-11">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
+<p>Parque vehicular. La Ciudad de México tiene placas de automóviles con tres números seguidos
 por tres letras, es decir, son placas del tipo 999-AAA. Sin embargo, no pueden empezar con 0
 (cero) ni se utilizan las letras I, O, Q y Ñ.</p>
 <p>a) ¿Cuántas placas diferentes son posibles?</p>
@@ -8076,7 +8082,9 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Ejercicio-12">Ejercicio 12<a class="anchor-link" href="#Ejercicio-12">¶</a></h1><p>Servicios restauranteros. Una cadena de hamburguesas anuncia que se ofrecen 512 maneras de
+<h1 id="Ejercicio-12">Ejercicio 12<a class="anchor-link" href="#Ejercicio-12">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
+<p>Servicios restauranteros. Una cadena de hamburguesas anuncia que se ofrecen 512 maneras de
 pedir una hamburguesa. Un cliente puede elegir cualquiera de estos ingredientes: cátsup, mos-
 taza, mayonesa, aderezo de la casa, cebolla, pepinillos, jitomate, tocino y lechuga.</p>
 <p>¿Crees que lo que afirma la empresa sea cierto? Justifica tu respuesta.</p>
@@ -8117,7 +8125,9 @@ $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Ejercicio-13">Ejercicio 13<a class="anchor-link" href="#Ejercicio-13">¶</a></h1><p>Cultura.Una persona tiene un libro de cada uno de los autores siguientes: Mario Vargas Llosa,<br/>
+<h1 id="Ejercicio-13">Ejercicio 13<a class="anchor-link" href="#Ejercicio-13">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
+<p>Cultura.Una persona tiene un libro de cada uno de los autores siguientes: Mario Vargas Llosa,<br/>
 Alberto Ruy Sánchez, Gabriel García Márquez, Günther Grass, Patrick Süskind, Heinrich Böll,<br/>
 Arturo Pérez-Reverte y Camilo José Cela. Como aún no los ha leído, quiere ponerlos en una<br/>
 repisa cerca de su cama. De acuerdo con esto, determina:</p>
@@ -8270,7 +8280,9 @@ $$ 2! = 2 $$</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Ejercicio-14">Ejercicio 14<a class="anchor-link" href="#Ejercicio-14">¶</a></h1><p>Finanzas. Se va a formar un portafolio de inversión de cuatro instrumentos financieros a partir
+<h1 id="Ejercicio-14">Ejercicio 14<a class="anchor-link" href="#Ejercicio-14">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
+<p>Finanzas. Se va a formar un portafolio de inversión de cuatro instrumentos financieros a partir
 de cinco de renta fija y seis de renta variable.</p>
 <p>¿De cuántas maneras podría formarse el portafolio
 si:</p>
@@ -8508,6 +8520,7 @@ La probabilidad del inciso (d) es = 0.18181818181818182 %
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Ejercicio-15">Ejercicio 15<a class="anchor-link" href="#Ejercicio-15">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
 </div>
 </div>
 </div>
@@ -8756,6 +8769,7 @@ $$</p>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Ejercicio-16">Ejercicio 16<a class="anchor-link" href="#Ejercicio-16">¶</a></h1>
+<a href="#Ejercicios">Contenido</a>
 </div>
 </div>
 </div>
@@ -9034,6 +9048,7 @@ $$</p>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Ejercicio-17">Ejercicio 17<a class="anchor-link" href="#Ejercicio-17">¶</a></h2>
+<a href="#Ejercicios">Contenido</a>
 </div>
 </div>
 </div>
