--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     </title>
 
     <body>
+        <h1>Porbabilidad y estadistica</h1>
+        <h3>videos</h3>
+        <ul>
+        <li><a href="https://drive.google.com/file/d/1hdqz-ljIABYdaA15YPp8XWZkHzAzsqOb/view">video 1, tema 3</a></li>
+        <li><a href="https://drive.google.com/file/d/1SB72xcNC1j_qabR4SelOGxBvBx0dCwcn/view">video 2, tema 3</a></li>
+        <li><a href="https://drive.google.com/file/d/15Y04d2E5ADIU0m-iZLnrGq4aIDmRmhbW/view">video 1, tema 4</a></li>
+        </ul>
+        
+        <h3>Nootbooks</h3>
+        <ul>
+        <li> <a href="testGlobal.html">Conjunto 1</a></li>
+        <li><a href="ejercicios-completos-explicados.html">Nootbook 2</a></li>
+        </ul>
         <h1>1.- Estadistica descriptiva</h1>
         <h2>1.1 Conceptos básicos de estadística: Definición,
             Teoría de decisión, Población, Muestra aleatoria,
@@ -649,18 +662,7 @@
                                         exactitud suele estar asociado con el error sistemático 
                                         y puede ser corregido mediante calibración y ajuste del instrumento de medición.</li> </ul>
                                 </p>
-                                <h3>videos</h3>
-                                <ul>
-                                <li><a href="https://drive.google.com/file/d/1hdqz-ljIABYdaA15YPp8XWZkHzAzsqOb/view">video 1, tema 3</a></li>
-                                <li><a href="https://drive.google.com/file/d/1SB72xcNC1j_qabR4SelOGxBvBx0dCwcn/view">video 2, tema 3</a></li>
-                                <li><a href="https://drive.google.com/file/d/15Y04d2E5ADIU0m-iZLnrGq4aIDmRmhbW/view">video 1, tema 4</a></li>
-                                </ul>
-                                
-                                <h3>Nootbooks</h3>
-                                <ul>
-                                <li> <a href="testGlobal.html">Conjunto 1</a></li>
-                                <li><a href="ejercicios-completos-explicados.html">Nootbook 2</a></li>
-                                </ul>
+
 </body>
 </head>
 </html>
