--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
         <li> <a href="testGlobal.html">Conjunto 1</a></li>
         <li><a href="ejercicios-completos-explicados.html">Nootbook 2</a></li>
         </ul>
+
+        <h3>perfil</h3>
+        <a href="app.dataquest.io/profile/230110313">perfil</a>
         <h1>1.- Estadistica descriptiva</h1>
         <h2>1.1 Conceptos básicos de estadística: Definición,
             Teoría de decisión, Población, Muestra aleatoria,
             Parámetros aleatorios.
         </h2>
+
         <p>
             Definición: Rama de las matemáticas aplicada que estudia la recopilación, organización, análisis e interpretación sistemática de datos.     
         </p>
